fixed image overflow issue

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html { scroll-behavior: smooth;}
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /*outline: 1px solid red !important;*/
+    outline: 1px solid red !important;
 }
 ul {
     list-style-type: none;
@@ -61,9 +61,9 @@ a {
 header {
     top: 0;
     position: sticky;
-    width:100%;
     background-color: white;
     padding-bottom: 0px;
+    margin: 0px;
 }
 nav {
     display: flex;
@@ -71,11 +71,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    padding-left: 20px;
-    padding-right: 20px;
     background-color: white;
     gap: 20px;
-    margin-left: 10%;
     margin-right: 10%;
 }
 nav a {
@@ -222,9 +219,6 @@ button:hover {
     width: 700px;
     height: 1049px;
     border-radius: 20px;
-}
-#about img {
-/*  max-height: 800px;-->*/
 }
 #abouttextandpoints {
     flex-direction: column;
@@ -582,9 +576,10 @@ footer a {
     display:none;
 }
 @media only screen and (max-width: 760px) {
-
+    img {
+        max-width: 100% !important;
+    }
     body{
-        max-width: 900px;
         padding: 0px;
     }
     .container{
@@ -595,6 +590,11 @@ footer a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 100%;
+    }
+    #calltoactiontext{
+        width: 80%;
+        padding: 20px;
     }
     #calltoactionbuttons{
         display: flex;
@@ -611,6 +611,13 @@ footer a {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        width: 80%;
+    }
+    #abouttextandpoints{
+        width: 90%;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
     }
     #aboutpicture img{
         display: none;
@@ -620,6 +627,12 @@ footer a {
         line-height: 1.5;
     }
     #mvconcernissues{
+        display: flex;
+        flex-direction: column;
+    }
+    #ConcernsIssues{
+        width: 90%;
+        padding: 20px;
         display: flex;
         flex-direction: column;
     }
